# meme-generator

./: .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_SKAFFOLD.md  DEPLOYMENT_STATUS.md  Earthfile  FINAL_SOLUTION.md  NATS_CORE_JETSTREAM_SOLUTION.md  PRODUCTION_SOLUTION.md  README.md  SOLUTION.md  analyze-nats-issue.md  check-status.sh  check-stream.sh  debug-nats.html  deploy.sh  direct-test.html  ngrok.yml  quick-fix-backend.patch  setup-and-test.md  setup-hosts.sh  setup.sh  skaffold-gke.yaml  skaffold.yaml  start-ngrok.sh  summary-and-fix.md  test-core-nats-backend.sh  test-core-nats.sh  test-direct.html  test-frontend-override.html  test-ingress-websocket.html  test-nats-ws.html  test-nats.html  test-websocket-debug.html  test-ws-final.html
docs/: auto-scaling.md  demo-roadmap.md  demo-script.md  meme_scale.md  nats-jetstream.md  observability-gke.md  redis-operator.md  setup.md  testing.md
infrastructure/: README.md  SETUP_GUIDE.md
k6/: README.md  SCALEOPS-TESTING.md  monitor-scaling.sh  run-tests.sh  scaleops-monitor.sh  test-plan.md  test-scaleops.sh
k8s/: .gitignore  all-resources.yaml  cache-namespace.yaml  deploy-order.yaml  infrastructure.yaml  kustomization.yaml  messaging-namespace.yaml  namespace.yaml
results/: k6-load-demo-harmony.json
scripts/: autoscaler-toggle.sh  nats-queue-load.sh
services/backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
services/backend/k8s/: keda-scaledobject.yaml  namespace.yaml
services/backend/scripts/: send-test-request.sh  watch-responses.sh
services/backend/src/: main.rs
(+162 files in other folders)
