[package]
name = "meme-generator"
version = "0.1.0"
edition = "2021"
authors = ["Meme Battle Royale Demo"]
description = "A Rust-based meme generator service using Stable Diffusion"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
async-nats = "0.40.0"
redis = { version = "0.24.0", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
futures = "0.3.30"
anyhow = "1.0.79"
base64 = "0.21.7"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
bytes = "1.5.0"
dotenv = "0.15.0"
clap = { version = "4.4.18", features = ["derive", "env"] }
metrics = "0.21.1"
metrics-exporter-prometheus = "0.12.1"
async-trait = "0.1.77"
axum = { version = "0.6.20", features = ["http1"] }
